--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -19,23 +19,33 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
+        run: |
+          node -v
 
       # 의존성 설치
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npm -v
 
       # React 빌드
       - name: Build the React
-        run: npm run build
+        run: |
+          npm run build
+
+      # NCP Credentials 설정
+      - name: Set up credentials (NCP)
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.NCP_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.NCP_SECRET_ACCESS_KEY }}
+          aws-endpoint: ${{ secrets.NCP_ENDPOINT }}
+          aws-region: ${{ secrets.NCP_REGION }}
+        run: |
+          echo "Credentials set for NCP"
 
       # NCP Object Storage에 배포
       - name: Deploy to Object Storage (NCP)
-        uses: ncloud/ncloud-sdk-action@v1
-        with:
-          command: 's3 sync ./build s3://${{ secrets.NCP_BUCKET_NAME }}/build --delete'
-        env:
-          NCLOUD_ACCESS_KEY_ID: ${{ secrets.NCP_ACCESS_KEY_ID }}
-          NCLOUD_SECRET_ACCESS_KEY: ${{ secrets.NCP_SECRET_ACCESS_KEY }}
-          NCLOUD_REGION: 'kr-standard'
-        
+        run: |
+          aws s3 sync ./build s3://${{ secrets.NCP_BUCKET_NAME }}/build --delete
         
