--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,27 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
-      # 가상 환경에 Repository를 Checkout
-      - name: Checkout repository
-        uses: actions/checkout@v2
 
-      # Node.js를 설치
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      # 아티팩트 다운로드
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
         with:
-          node-version: '16'
-
-      # 의존성 설치
-      - name: Install dependencies
-        run: |
-          npm install
-          npm -v
-
-      # React 빌드
-      - name: Build the React
-        run: |
-          npm run build
+          name: build
+          path: ./build
 
       # NCP Credentials 설정
       - name: Set up credentials (NCP)
