--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -37,9 +37,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.NCP_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.NCP_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.NCP_REGION }}
 
       # NCP Object Storage에 배포
       - name: Deploy to Object Storage (NCP)
         run: |
-          aws s3 sync --region ${{ secrets.NCP_REGION }} ./build s3://${{ secrets.NCP_BUCKET_NAME }}/build --delete
+          aws s3 sync ./build s3://${{ secrets.NCP_BUCKET_NAME }}/build --delete
         
